--- a/web/circularlabs/themes/spectral/layouts/_default/list.html
+++ b/web/circularlabs/themes/spectral/layouts/_default/list.html
@@ -1,7 +1,10 @@
 {{ partial "header.html" . }}
 <article id="main">
   <header {{ with .Params.image }}style="background-image: url('{{ . }}')"{{ end }}>
-    <h2>{{ i18n "allarticles" }}</h2>
+    <!--
+        <h2>{{ i18n "allarticles" }}</h2>
+        -->
+    <h2>{{ .Params.title }}</h2>
     {{ with .Params.subtitle }}
     <p>{{ . }}</p>
     {{ end }}
